# ds-sso-user-account

./: .gitignore  .prettierignore  Dockerfile  README.md  docker-compose.yml  fabfile.py  gitpod.Dockerfile  jest.config.js  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  stellar.yaml  tsconfig.json  webpack.config.js
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: codeql-analysis.yml
docker/: bashrc.sh
tna_account_management/: asgi.py  urls.py  wsgi.py
tna_account_management/authentication/: urls.py
tna_account_management/authentication/auth0/: urls.py  views.py
tna_account_management/authentication/django/: forms.py  urls.py  views.py
tna_account_management/project_styleguide/: apps.py  views.py
tna_account_management/project_styleguide/templates/: base_page.html
tna_account_management/project_styleguide/templates/pages/defender/: lockout.html
tna_account_management/project_styleguide/templates/pages/forms/: form_page.html  form_page.yaml  form_page_landing.html
tna_account_management/project_styleguide/templates/patterns/: base.html  base_form_view.html
tna_account_management/project_styleguide/templates/patterns/molecules/: footer.html  header.html  login-status.html
tna_account_management/project_styleguide/templates/patterns/pages/auth/: login.html  logout_confirm.html  logout_success.html
tna_account_management/project_styleguide/templates/patterns/pages/errors/: 404.html
tna_account_management/settings/: base.py  dev.py  production.py  test.py
tna_account_management/static_src/javascript/: main.js
tna_account_management/static_src/javascript/components/: autocomplete.js  bulk-action.js  bulk-edit.js  bulk-select-all.js  conditional-field.js  stages-redirect.js
tna_account_management/static_src/sass/: main.scss
tna_account_management/static_src/sass/abstracts/: _mixins.scss  _variables.scss
tna_account_management/static_src/sass/base/: _base.scss  _typography.scss
tna_account_management/static_src/sass/components/: _accordion.scss  _avatar.scss  _badge.scss  _bulk-menu.scss  _button.scss  _chart.scss  _field.scss  _filters.scss  _form.scss  _record-set-viewer.scss  _record-sets.scss  _tab-nav-item.scss  _table.scss  _tabs-nav.scss  _tabs.scss
tna_account_management/static_src/sass/layout/: _footer.scss  _header.scss  _sidebar.scss
tna_account_management/users/: apps.py  forms.py  models.py  urls.py  views.py
tna_account_management/users/migrations/: 0002_add_user_fields.py  0003_simplify_name_fields_and_add_profile_override.py  0004_alter_user_profile_override.py  0005_user_is_social.py  0006_remove_unnecessary_fields.py  0007_remove_user_profile_override.py
tna_account_management/utils/: apps.py  auth0.py  context_processors.py  forms.py  query.py
tna_account_management/utils/templatetags/: querystring_modify.py
(+6 files in other folders)
