[tool.poetry]
name = "tna_account_management"
version = "0.1.0"
description = ""
authors = ["Torchbox <hello@torchbox.com>"]

[tool.poetry.dependencies]
python = "~3.9"
django = "~3.2"
psycopg2 = "~2.8"
gunicorn = {version = "~20.1", optional = true}
django-pattern-library = "~0.5"
whitenoise = "~5.3"
dj-database-url = "~0.5"
sentry-sdk = "~1.0"
django-redis = "~5.0"
django-storages = { version ="~1.11", extras = ["boto3"] }
django-referrer-policy = "~1.0"
django-csp = "~3.6"
scout-apm = "~2.23"
django-basic-auth-ip-whitelist = "~0.3.4"
coverage = "^5.4"
django-defender = "0.9.1"
djhtml = "^1.4.11"
tbxforms = "1.0.16" # Should match package.json. Includes django-crispy-forms.
Authlib = "^1.0.1"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
Werkzeug = "^2.0.3"
django-extensions = "~2.2"
stellar = "~0.4"

# Linters etc.
black = "22.1.0"
detect-secrets = "~0.14"
flake8 = "3.8.3"
isort = "5.7.0"
pre-commit = "~2.11"

# Documentation
mkdocs = "1.3.0"
mkdocs-material = "8.2.8"
pymdown-extensions = "9.3"
pudb = "^2020.1"
honcho = "^1.0.1"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88
target-version = ['py39']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | docs
    | venv
    | node_modules
  )/
)
'''
