[tool.poetry]
name = "tna_account_management"
version = "0.1.0"
description = ""
authors = ["Torchbox <hello@torchbox.com>"]

[tool.poetry.dependencies]
python = "~3.9"
django = "~3.2"
psycopg2 = "~2.8"
gunicorn = {version = "~20.1", optional = true}
django-pattern-library = "~0.7"
whitenoise = "~5.3"
dj-database-url = "~0.5"
sentry-sdk = "~1.0"
django-redis = "~5.2"
django-storages = { version ="~1.12", extras = ["boto3"] }
tbxforms = "1.0.16"
Authlib = "^1.0.1"
auth0-python = "^3.23.1"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
Werkzeug = "^2.0.3"
django-extensions = "~2.2"

# Linters etc.
black = "22.3.0"
detect-secrets = "~0.14"
flake8 = "3.8.3"
isort = "5.7.0"
pre-commit = "~2.11"

# Documentation
pudb = "^2020.1"
honcho = "^1.0.1"
coverage = "^6.4.1"
django-debug-toolbar = "^3.5.0"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88
target-version = ['py39']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | docs
    | venv
    | node_modules
  )/
)
'''
